# water-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  flake.nix  imgui.ini
src/: main.cpp
src/buffers/: IndexBuffer.cpp  baseBuffer.hpp  computeBuffer.cpp  computeBuffer.hpp  indexBuffer.hpp  uniformBuffer.cpp  uniformBuffer.hpp  vertexBuffer.cpp  vertexBuffer.hpp
src/programs/: baseProgram.hpp  computeProgram.cpp  computeProgram.hpp  shaderProgram.cpp  shaderProgram.hpp
src/renderer/: gui.cpp  gui.hpp  renderer.cpp  renderer.hpp  shaders.cpp  shaders.hpp  window.cpp  window.hpp
src/shaders/: calcDensity.compute  posGen.compute  shader.compute  shader.fragment  shader.vertex  sph.compute  step1.compute  step2.compute  step3.compute  varying.def.sc
src/utils/: types.hpp  utils.cpp  utils.hpp
